--- a/VRChat/41/979641.html
+++ b/VRChat/41/979641.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "7rK0MJEvEIZdizvFzHhVwdkW4Q0da2PlzSv/c6YhRik="></script>
+    "pesYSeu6t83/QYQPuw5rlqBL4CVZbLld/hXecqo/VP0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[眼鏡]丸眼鏡セット(SHG-18-0801、SHG-21-0103L)","description":"☆－－－－－－－－－☆\n2021/01/31\n丸眼鏡の軽量版(レンズ無し、ポリゴン削減、1マテリアル)、リメイク版を追加。\n金額改定予定　200円→300円(3月より)\n\n2021/03/01\n金額改定しました　200円→300円\n☆－－－－－－－－－☆\n\n丸眼鏡のセットです。\n・丸眼鏡(ノーマル)\n・ぐるぐる眼鏡\n・鼻眼鏡\n・丸眼鏡(リメイク:SHG-18-0801)　※2020/01追加\n・丸眼鏡(軽量版:SHG-21-0103L_maru)　　※2020/01追加\n各眼鏡のつるにボーン入りで、顔に合わせて調整いただけます。\n鼻眼鏡のヒゲもダイナミックボーンでプルプル可能。\n\n\n仕様\n　作者：@Sharono_vvv\n　ファイル形式：unitypackage、fbx、png\n　ポリゴン数：約1000～\n　その他：ボーンあり(つる左右、ヒゲ)\n　テクスチャ：丸眼鏡-なし／ひげ-なし／ぐるぐる-レンズのみ\n　　　　　　　新丸眼鏡-2色(UTS2)／軽量版-2色(TOONLIT)\n\n利用にあたって(利用規約)\n\n　〇：商用、非商用問わずご利用ください。\n　〇：改造、別モデルへのパーツ組み込み等はご自由に。\n　×：ただし、販売モデルそのままの状態での転売や他者への配布は禁止とします。\n　不明点ございましたらお問い合わせください。\n","url":"https://booth.pm/ja/items/979641","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/d84d54f0-8809-4972-baee-3f190b4e9fd3/i/979641/25e19f7c-b9db-46dc-9ca7-f7104026ac5a_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="7rK0MJEvEIZdizvFzHhVwdkW4Q0da2PlzSv/c6YhRik="></script>
+    nonce="pesYSeu6t83/QYQPuw5rlqBL4CVZbLld/hXecqo/VP0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -123,6 +120,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -137,7 +136,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -178,7 +178,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/979641/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               188
@@ -193,14 +193,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/979641/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               188
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
