--- a/VRChat/33/979333.html
+++ b/VRChat/33/979333.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "OzWDa717Ni+6ASkQytzVvYqVxCvvAoxQMSSsFV+7zp0="></script>
+    "nQUhPwbJysjc2TwpKqWC5ZG92wrBQW3LzmC59fmB28k="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ペーパーヘッドギア","description":"私がVRChatで使用してるアバターのヘッドギアを、一般的な3Dモデルに付けられるよう形を整えたものです。さらに剣の柄に変形できるギミックを加えました。\n\n刀身まで含めて設定済みのデータを入れているので、ヘッドギア／剣どちらの状態でもすぐにお使いいただけます。\n\n使用に関しては特に禁止事項を設けていません。\n購入後はご自由にお使いください。","url":"https://booth.pm/ja/items/979333","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/1e917239-eb4f-44e6-8fa0-efcfc40c090b/i/979333/ae57bf38-7aa5-438a-a324-f5b5f7edd16c_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="OzWDa717Ni+6ASkQytzVvYqVxCvvAoxQMSSsFV+7zp0="></script>
+    nonce="nQUhPwbJysjc2TwpKqWC5ZG92wrBQW3LzmC59fmB28k="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/979333/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               3
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/979333/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               3
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
