--- a/VRChat/71/956571.html
+++ b/VRChat/71/956571.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "6IOaU6hL1KXIiz/Rm9ThhLJkbE/EdSLujgOay4CZcQc="></script>
+    "3ik0iJoI2yOGakTJW4hsYWBfTDcVJuJMtpf5dvKBPZ4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"イカ焼きの屋台【3D素材】","description":"【イカ焼き屋の屋台1.1】\n・内容\n　イカ焼き.fbx\n　イカ焼き.png\n\n　マテリアル数1\n　ポリゴン数2326\n\n\n・紹介\n　シンプルなイカ焼きの屋台です。ゲーム素材にしてもOK、VRChatのワールドに設置してもOK、アバターに仕込んで移動屋台になってもOK、改変してたこ焼き屋にしてもOKの3D素材です。\n※イカは付属しません。別途ご用意ください。\n\n・1.1追加小物\n　扇風機、電球、秘伝のタレを追加しました。\n\n【利用規約】\n・3Dモデルをヘイトスピーチや他者への嫌がらせ等での使用を禁止します。\n・3Dモデルを使用したことにより発生したトラブル、損失等の責任は一切負いません。\n・営利目的での再配布を禁止します。\n\n・上記3項目に接触しなければ何をやっても良いです。\n・使用の際にクレジットの表記は必要ありません。\n","url":"https://booth.pm/ja/items/956571","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/caf3bb4c-ffdb-4c61-b7f6-afae273c5993/i/956571/e19ff7c5-ff80-40a7-86e8-d5a3b3ebd35c_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="6IOaU6hL1KXIiz/Rm9ThhLJkbE/EdSLujgOay4CZcQc="></script>
+    nonce="3ik0iJoI2yOGakTJW4hsYWBfTDcVJuJMtpf5dvKBPZ4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/956571/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               95
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/956571/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               95
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
