--- a/VRChat/58/975158.html
+++ b/VRChat/58/975158.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "5ANwks6+cFFrEmghyotcK9DnZaTN9AhCqSxdG0LXEmQ="></script>
+    "VXmCvyc2C+F8lkC2OC4YTHg0uE7nd2wvxri7+PbJTYQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ジャンクロボ - パーツ群 ～バーチャルジャンク品～","description":"●仕様\nこの製品はfbxの3Dモデルです。\nジャンク品ですのでご自由にお使いください。\n\nパーツごとにfbxファイルを分けているので\n使いたいパーツを選んでお使いください。\n\n手はスキニング済みのものを追加したのでより簡単にアバター制作が可能です(UnityHumanoid対応)\n\n\n●商業利用\n本データのR-18への利用や改変については自由です。\nまた、営利目的での利用も可能です。ゲーム等ご自由にお使いください。\nこのモデルを利用した作品を制作した場合は連絡を下されば大変喜びます。\n\n●禁則事項\n本データを利用したことによる損害に対する責任は負わないものとします。\nまた、特定個人や団体への中傷を目的とした利用を禁止します。\n\n//履歴\n2018/08/27　スキニング済みの手を追加しました","url":"https://booth.pm/ja/items/975158","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"0"},"image":"https://booth.pximg.net/c/620x620/3b675027-b6f1-46ed-a792-ba287fa9d0ce/i/975158/244033e5-80db-4cda-82dd-378187bc1980_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="5ANwks6+cFFrEmghyotcK9DnZaTN9AhCqSxdG0LXEmQ="></script>
+    nonce="VXmCvyc2C+F8lkC2OC4YTHg0uE7nd2wvxri7+PbJTYQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/975158/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               51
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/975158/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               51
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
