--- a/VRChat/43/975143.html
+++ b/VRChat/43/975143.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "1GnrG1FQAS6Jwt+nfNYIQpNcHpBs3kEzexXS5D9QVh4="></script>
+    "Z9PDk9GoM9+vw7h1S2B8et77Py6AhQooarrRLhILN4A="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"3Dソビエトロシア試作銃シリーズvol.1「TKB-059」","description":"\n\n□ソビエト連邦時代の試作三連銃身火器、TKB-059の3Dモデルです。\n5344△ポリゴン。\n\n\n□内容\n・tkb-059.fbx　本体\n\n・readme.txt \n\n・0x.png　サンプル画像\n\n\n□使用方法\n\nfbxデータを各種ソフトにインポートしてご利用下さい。\n\n\n□利用規約\n\n配布行為そのものを目的とした再配布を禁じます。\n(自作のモデルの一部に組み込む等の場合は可)\n\nVRchat、改変、動画、同人、移植、商用などにどうぞ。\n\n\n□TKB-059\n\n設計者：コロボフ\n弾薬：7.62×39mm弾(30×3連弾倉？)\n全長：約690mm\n重量：4.5kg\n設計時期：～1966\n\n\n\n□連絡先\n\nTwitter： @mabo_to_fu\nメール： stanag2324@gmail.com","url":"https://booth.pm/ja/items/975143","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/dd09d57d-ff0e-4d48-b34c-08c891168638/i/975143/c25fc7db-574d-464b-84a3-fb9242cc7372_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="1GnrG1FQAS6Jwt+nfNYIQpNcHpBs3kEzexXS5D9QVh4="></script>
+    nonce="Z9PDk9GoM9+vw7h1S2B8et77Py6AhQooarrRLhILN4A="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/975143/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               36
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/975143/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               36
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
