--- a/VRChat/79/974579.html
+++ b/VRChat/79/974579.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Q6lzkz+R2vKuUFgpy3GB+/COWCSmUN1ZOp8JN2/eZs4="></script>
+    "dAegLoTHM0u18nahmWXmmDiRgrOUmteaIuAk0pwQep0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat用モデル　熱断刀","description":"VRChat用の小物　熱断刀です\nUnityPackageが入っていますのでそちらをお使いください\n\nVRChatでの使用におけるモデルの改変、ギミックの追加などはご自由にどうぞ\nまた、本モデルを使用した画像や動画などのアップロードも\nご自由にどうぞ\n\n本商品および改変した本商品の二次配布は一切を禁止します\n\n※熱断刀という名前なのに刀身が赤くないのは赤熱するギミックを実装できていないからです\n今後実装したものを再配布する可能性があります\n\n不具合や扱いにくいと感じた部分があれば遠慮なくメッセージ下さい\n修正対応や、今後の参考にします","url":"https://booth.pm/ja/items/974579","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/89744857-5e96-49d2-b69b-0167803f90b2/i/974579/f0db4c76-1370-4a71-bee7-cd5e46361c51_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Q6lzkz+R2vKuUFgpy3GB+/COWCSmUN1ZOp8JN2/eZs4="></script>
+    nonce="dAegLoTHM0u18nahmWXmmDiRgrOUmteaIuAk0pwQep0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -175,7 +177,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/974579/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               82
@@ -190,14 +192,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/974579/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               82
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
